--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -11,9 +11,3 @@ html {
   background: black;
   scroll-behavior: smooth;
 }
-
-#portfolio > div {
-  max-height: 100vh;
-  max-width: 100vw;
-  overflow: hidden;
-}
