--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -1,10 +1,11 @@
 #landing {
-  max-height: 100vh;
-  max-width: 100vw;
+  // max-height: 100vh;
+  // max-width: 100vw;
   @extend %column-flex-settings;
   overflow: hidden;
 
   #nav {
+    display: none;
     height: 55vh;
     width: 100vw;
     order: 2;
@@ -23,6 +24,7 @@
 @media only screen and (min-width: 768px) {
   #landing {
     #nav {
+      display: none;
       height: 20vh;
       order: 1;
     }
